# workmate

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/ai-elements/: model-selector.tsx
src/components/chat/: ChatWindow.tsx  ModelPicker.tsx
src/components/permissions/: PermissionDialog.tsx  index.ts
src/components/settings/: SettingsDialog.tsx
src/components/shared/: Button.tsx  Input.tsx
src/components/sidebar/: Sidebar.tsx
src/contexts/: OpenCodeContext.tsx
src/hooks/: index.ts  useOpenCode.ts
src/lib/: tauri.ts
src/stores/: appStore.ts
src/types/: index.ts
